# nixos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTAINER_INIT.md  DIRETRIZES.md  Dockerfile.claude  Justfile  Makefile  README.md  SELF.md  SOUL.md  Untitled  ai.nix  alien.nix  battery.nix  binaries.nix  bluetooth.nix  boot.nix  configuration.nix  cosmic.nix  docker-compose.claude.yml  docker-compose.podman.yml  flake.nix  flatpak.nix  gnome.nix  hardware-configuration.nix  hardware.nix  home.nix  hyprland_video_transcript.en.vtt  kernel.nix  leech.bak  makefile  nix.conf  nix.nix  nvidia.nix  packages.nix  plymouth.nix  programs.nix  services.nix  (+3 more)
vennon/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile  vennon
vennon/.github/workflows/: ci.yml
vennon/_leech.bak/docker/: README.md
vennon/_leech.bak/self/: GLOSSARY.md  INIT.md  agent.md  claude.bypass.json
vennon/containers/: README.md
vennon/containers/claude/: Dockerfile  docker-compose.yml  vennon.yaml
vennon/containers/cursor/: AGENTS.md  Dockerfile  docker-compose.yml  vennon.yaml
vennon/containers/leech/: Dockerfile  docker-socket-filter.conf  entrypoint.sh
vennon/containers/opencode/: Dockerfile  docker-compose.yml  vennon.yaml
vennon/containers/vennon/: Dockerfile  entrypoint.sh  vennon.container
vennon/crates/bridge/: Cargo.toml
vennon/crates/bus/: Cargo.toml
vennon/crates/buzz/: Cargo.toml
vennon/crates/deck/: Cargo.toml  README.md
vennon/crates/vennon/: Cargo.toml  README.md
vennon/crates/vennon-update/: Cargo.toml
vennon/crates/yaa/: Cargo.toml  README.md
vennon/self/: AGENT.md  ARSENAL.md  CLAUDE.slim.md  DIRETRIZES.md  LAB.md  LITE.md  MANUAL.md  PERSONA.md  SYSTEM.md  autonomous.md  claude.bypass.json  status-patch.sh
vennon/self/commands/: tick.md
vennon/self/hooks/: session-start.sh  user-prompt-submit.sh
vennon/self/memory/: feedback_container_readonly.md  feedback_docker_install.md  feedback_hyprctl_pixels.md  feedback_leech_cli_commands.md  feedback_leech_self_contained.md  project_jonathas_agent.md  project_obsidian_agents.md  reference_logs_location.md  reference_pr_message_skill.md  user_context.md
vennon/self/obsidian/: devpipeline.md
vennon/self/personas/: GLaDOS.persona.md
vennon/self/scripts/: boot-display.sh  chrome-relay.py  claude-oauth-usage.sh  cursor-agents.md  gh-status.sh  logging.sh  opencode-agents.md  scheduler-dashboard.sh  statusline.sh
vennon/self_bak/: INIT.md  LITE.md  PERSONALITY.md  claude.bypass.json
vennon/src/: container.rs  main.rs  manifest.rs  service.rs
(+2518 files in other folders)
