[workspace]
resolver = "2"
members = [
    "crates/vennon",
    "crates/yaa",
    "crates/deck",
    "crates/buzz",
    "crates/vennon-update",
]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
libc = "0.2"
