[package]
name = "deck"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deck"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ratatui = "0.29"
crossterm = "0.28"
vennon-update = { path = "../vennon-update" }
