[package]
name = "zion-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zion"
path = "src/main.rs"

[dependencies]
zion-sdk = { path = "../zion-sdk" }
zion-tui = { path = "../zion-tui" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
