[package]
name = "leech-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "leech_cli"
path = "src/lib.rs"

[[bin]]
name = "leech"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
figment = { version = "0.10", features = ["yaml", "env"] }
inquire = "0.7"
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
